# cca_zoo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .scrutinizer.yml  .travis.yml  CITATION.cff  DeCCA.py  DeCCAl.py  DeCCAl_reg.py  DeCCAnl.py  DeCCAnl_reg.py  DeLCCA.py  DeVCCA.py  LICENSE  README.md  bench.ipynb  cca_zoo_sparsity.ipynb  cca_zoo_tutorial.ipynb  dacca.py  deconfounding_demo.ipynb  dvcca_deconfounding.py  example.py  interactive_cca.ipynb  logm.py  plslightningjames.py  pyproject.toml  requirements.txt  requirements_minimal.txt  run.py  setup.py  svd_test.py
CCA_methods/: DCCAE.py  DVCCA.py  KCCA.py  __init__.py  alternating_least_squares.py  deep.py  deep_models.py  gaussian_process_cca.py  graph.py  linear.py  linear_deconfounding.py  mnist_utils.py  plot_utils.py
benchmark/: cca_high_dimensions.py  gradient_benchmark.py  pls_high_dimension.py
blockeigengame/: __init__.py  _baseexperiment.py  _utils.py  metrics.py
build_tools/: linting.sh
cca_zoo/: DCCA.py  DCCAE.py  DVCCA.py  KCCA.py  __init__.py  _base.py  _sequential.py  alsinnerloop.py  alternating_least_squares.py  configuration.py  data.py  dcca.py  dcca_noi.py  dccae.py  deep.py  deep_models.py  deepwrapper.py  dtcca.py  dvcca.py  generate_data.py  innerloop.py  kcca.py  linear.py  objectives.py  plot_utils.py  sequential.py  splitae.py  wrapper.py  wrappers.py
ccagame/: __init__.py  baseexperiment.py  utils.py
cluster/: run_cluster_ana.sh  wandb_agent.sh  wandb_agent_ana.sh
datasets/: __init__.py  adni.py  exponentialspectrum.py  linearspectrum.py  mnist.py  ukbiobank.py  xrmb.py
docs/: CNAME  conf.py  contents.rst  glossary.rst  index.rst  requirements.txt  user_guide.rst
example_scripts/: MNIST_example.ipynb  example_main.py
examples/: __init__.py  plot_dcca.py  plot_dcca_custom.py  plot_dcca_custom_data.py  plot_dcca_multi.py  plot_dvcca.py  plot_gradient.py  plot_hyperparameter_selection.py  plot_kernel_cca.py  plot_kernel_ncca.py  plot_many_views.py  plot_multiview_dcca.py  plot_plotting.py  plot_ridge_reg.py  plot_sparse_cca.py  plot_validation.py  plot_visualisation.py  utils.py
experimental_scripts/: whitening_exp.py
experiments/: __init__.py  config.py  experiment_config.py  mnist.py  train.py
jaxline/: __init__.py  base_config.py  conftest.py  experiment.py  platform.py  train.py  train_test.py  utils.py  utils_test.py
jaxline_fork/: __init__.py  platform.py  train.py
joss/: paper.md
model/: ccagame.py
pyCCA/: DCCAE.py  DVCCA.py  __init__.py  alternating_least_squares.py  deep.py  generate_data.py  linear.py  objectives.py
recipe/: meta.yaml
requirements/: basic.txt  conda.txt  deep.txt  probabilistic.txt
scripts/: ALS_averaging.py  Confound_GAN.py  DCCA_adversary.py  DCCA_discriminator_experiment.py  Example.py  PCA.py  Rings.py  Speed_test.py  analyze_results.py  baselines.py  convergence_plots.py  convergence_plots_initialization.py  covariance_structure.py  dcf_gcca.py  disproof.py  example.ipynb  example.py  example_pca.py  hcp_multi_run.py  hcp_multi_run_multi.py  hcp_multi_run_sparse.py  hcp_utils.py  kernel_testing.py  mnist.py  plot_weights.py  regression_test.py  ridge_regression_exploration.py  witten_comparison.py  witten_comparison_3d.py
test/: test_callbacks.py  test_common.py  test_cross_corr.py  test_data.py  test_datasets.py  test_deepmodels.py  test_explained_variance.py  test_gradient.py  test_nonparametric.py  test_pickle.py  test_plotting.py  test_prediction.py  test_preprocessing.py  test_probabilistic.py  test_regularised.py  test_search.py  test_sequential.py  test_stochastic.py  test_unregularized.py  test_utils.py
tests/: test_alsinnerloop.py  (+20 more)
(+723 files in other folders)
