[tool.poetry]
name = "cca-zoo"
version = "0.0.0"
description = "Canonical Correlation Analysis Zoo: A collection of Regularized, Deep Learning based, Kernel, and Probabilistic methods in a scikit-learn style framework"
authors = ["jameschapman <james.chapman.19@ucl.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameschapman19/cca_zoo"
keywords = ["cca"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
scipy = "*"
scikit-learn = "*"
scikit-prox = "*"
matplotlib = "*"
pandas = "*"
seaborn = "*"
tensorly = "*"
joblib = "*"
mvlearn = "*"
tqdm = "*"
pytorch-lightning = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
codecov = "*"
pytest-cov = "*"

[tool.poetry.extras]
probabilistic = ["jax", "numpyro", "arviz"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
